fix(header-photo): Increase photo size so it can be fully visible on desktop.

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ p {
 /* Header section */
 .header-container {
     width: 100%;
-    height: 450px;
+    height: 500px;
 }
 .header-image {
     width: 100%;
